Перенести маппинг в сервис и исправить валидацию